/* 
  File.strings
  Pods

  Created by BitBurst GmbH on 07.01.21.
  
*/

"SENSITIVE" = "Too sensitive" ;
"UNINTERESTING" = "Uninteresting" ;
"TECHNICAL" = "Technical issues" ;
"TOO_LONG" = "Too long" ;
"OTHER" = "Other Reason" ;

"CONTINUE_SURVEY" = "Continue with survey";
"LEAVE_TITLE" = "Leave Survey";
"LEAVE_DESC" = "Choose a reason for leaving the survey";
